fix overlap with settings page error messages

--- a/plugins/faustwp/includes/settings/assets/style.css
+++ b/plugins/faustwp/includes/settings/assets/style.css
@@ -50,7 +50,7 @@ h2.main {
 /* Header
 ---------------------------------------------------------------------------- */
 
-header {
+header h1 {
 	background: var(--brand-color);
 }
 
